infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: noizy
  labels:
    app.kubernetes.io/name: noizy
